--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "set-mcp"
-version = "0.1.0a"
+version = "0.1.0a1"
 description = "Add your description here"
 readme = "README.md"
 authors = [
