--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = [
 ]
 requires-python = ">=3.11"
 dependencies = [
+    "fastmcp>=2.1.1",
+    "httpx>=0.28.1",
     "pandas>=2.2.3",
 ]
 
@@ -18,6 +20,7 @@ build-backend = "hatchling.build"
 [dependency-groups]
 dev = [
     "jupyter>=1.1.1",
+    "pyright>=1.1.399",
 ]
 
 [project.scripts]
